207-04-23 Alasdair Allan <aa@astro.ex.ac.uk>

        * www/robonet-1.0/cgi-bin/*: Added support for different filters
          from the override page.
          
207-04-18 Alasdair Allan <aa@astro.ex.ac.uk>

        * Fixes for new Java native NodeAgents

2007-04-04 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/user_agent.pl: Increased time outs to 60s
        
        * eSTAR/UA/Handler.pm & eSTAR/UA/SOAP/Handler.pm: Added an
          all_telescopes() method to drop observations onto all
          available nodes.
          
        * www/robonet-1.0/cgi-bin/*: Updated to deal with all_telescopes()
          method and the new timeout problems with the LT. 
          
2007-03-07 Alasdair Allan <aa@astro.ex.ac.uk>

        * www/robonet-1.0/cgi-bin/*: Updated for 2007 season.
        
2007-03-07 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/ogle_fetch.pl: Pointed at LJM rather than St. Andrews
        
        * bin/user_agent.pl: Pointed to LT proxy on estar3 rather than on
          the LT proxy machine in La Palma.

2007-02-13 Alasdair Allan <aa@astro.ex.ac.uk>

	* www/estar/cgi-bin/mobile.cgi: Added a mobile version of the status
	  page. Still needs a lot of work.

2007-02-12 Alasdair Allan <aa@astro.ex.ac.uk>

        * eSTAR/JACH/Handler.pm: Bug fix!
	
2007-02-06 Alasdair Allan <aa@astro.ex.ac.uk>

        * eSTAR/Util.pm: Fixed fudge_project() to handle non-empty projects.
        
        * eSTAR/UA/Handler.pm: Added better error reporting on 'reject' messages
        
        * bin/user_agent.pl: Pointed User Agent at "native" LT proxy machine,
          fixed passing of <Project> tag between messages.
        
        * bin/make_observation.pl: Added passing of <Project> tag.
        
        * www/robonet-1.0/cgi-bin/status.cgi: Added RA&Dec hover tip for non
          Exo-planet or SNe observations.

2007-01-03 Alasdair Allan <aa@astro.ex.ac.uk>

        * eSTAR/JACH/Handler.pm: Added offset for WFCAM
        